<resources>
    <string name="app_name">Listing Saver</string>
    <string name="total_listing">Total Listing</string>
    <string name="subtitle">%15d Listings</string>
    <string name="listing_title_hint">Enter a title for the job listing</string>
    <string name="listing_company_hint">Enter a title for the job listing</string>
    <string name="listing_location_hint">Enter the location of the job listing</string>
    <string name="listing_salary_hint">Enter the salary for the job listing</string>
    <string name="listing_link_hint">Job listing link</string>

    <string name="listing_title_label">Job Title</string>
    <string name="listing_location_label">Location</string>
    <string name="listing_company_label">Company</string>
    <string name="listing_link_label">Link</string>
    <string name="listing_salary_label">Salary</string>
    <string name="listing_details_label">Details</string>
    <string name="listing_date_label">Date Applied</string>
    <string name="listing_time_label">Time Applied</string>
    <string name="listing_recruiter_label">Recruiter</string>
    <string name="full_time_label">Full Time</string>
    <string name="date_picker_title">Date Applied:</string>
    <string name="time_picker_title">Time Applied:</string>
    <string name="new_listing">New Listing</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="hide_subtitle">Hide subtitle</string>
    <string name="subtitle_format">%1$d listings</string>
    <string name="recruiter_contact">Choose Recruiter</string>

</resources>
