<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/listing_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/darker_gray"
                    android:cropToPadding="true"
                    android:scaleType="centerInside" />

                <ImageButton
                    android:id="@+id/listing_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/listing_title_label" />

                <EditText
                    android:id="@+id/listing_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/listing_title_hint" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listing_company_label" />


            <EditText
                android:id="@+id/listing_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/listing_company_hint" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listing_location_label" />


            <EditText
                android:id="@+id/listing_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/listing_location_hint" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listing_salary_label" />


            <EditText
                android:id="@+id/listing_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/listing_salary_hint" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listing_link_label" />


            <EditText
                android:id="@+id/listing_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/listing_link_hint" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listing_date_label" />

            <Button
                android:id="@+id/listing_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listing_time_label" />

            <Button
                android:id="@+id/listing_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listing_recruiter_label" />

            <Button
                android:id="@+id/choose_recruiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recruiter_contact" />

            <CheckBox
                android:id="@+id/full_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_time_label" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>
